--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     </section>
     <section class="codedBY">
       <div class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="#">Your Name Here</a>.
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. <br>
+        Coded by <a href="https://www.frontendmentor.io/profile/NitheeshKumar-C" target="_blank">NitheeshKumar</a>.
       </div>
     </section>
   </main>
